fix: incorrect icon size for close icon on mobile

--- a/packages/frontend/src/components/Header/search.module.css
+++ b/packages/frontend/src/components/Header/search.module.css
@@ -73,6 +73,8 @@ input:focus-visible {
   border-radius: 12px;
   width: 24px;
   height: 24px;
+  max-height: 24px;
+  max-width: 24px;
   background: transparent;
 }
 
